refactored dshabord components

--- a/src/app/components/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/components/dashboard-admin/dashboard-admin.component.html
@@ -1,5 +1,26 @@
 <mdb-tabset #staticTabs [buttonClass]="'nav-tabs indigo'" [contentClass]="'card'">
-  <mdb-tab heading="Tab">
+  <mdb-tab heading="{{ 'TABS.REVENUE' | translate }}">
+    <div class="row">
+      <div class="col-12">
+        <br>
+      </div>
+    </div>
+  </mdb-tab>
+  <mdb-tab heading="{{ 'TABS.EVENTS' | translate }}">
+    <div class="row">
+      <div class="col-12">
+        <br>
+      </div>
+    </div>
+  </mdb-tab>
+  <mdb-tab heading="{{ 'TABS.USER' | translate }}">
+    <div class="row">
+      <div class="col-12">
+        <br>
+      </div>
+    </div>
+  </mdb-tab>
+  <mdb-tab heading="{{ 'TABS.PRINTING_HOUSES' | translate }}">
     <div class="row">
       <div class="col-12">
         <br>
