--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,10 @@
-<footer class="page-footer center-on-small-only pt-0 mt-5 fixed-bottom unique-color">
+<footer class="page-footer center-on-small-only pt-0 mt-5 fixed-bottom indigo">
 
-  <!--Footer Links-->
+  <!--
   <div class="container">
     <div class="row">
 
-      <!--Second column-->
+
       <div class="col-md-6">
         <ul>
           <li>
@@ -15,16 +15,15 @@
           </li>
         </ul>
       </div>
-      <!--/.Second column-->
+
     </div>
-  </div>
-  <!--/.Footer Links-->
-  <!--Copyright-->
+  </div> -->
+
   <div class="footer-copyright">
     <div class="container-fluid">
       © 2017 Copyright:
       <a routerLink="/"> eventpicking.de </a>
     </div>
   </div>
-  <!--/.Copyright-->
+
 </footer>
