--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -39,7 +39,7 @@
           </div>
 
           <div class="text-center mb-3">
-            <button type="submit" class="btn unique-color btn-lg btn-block" id="button_login" [disabled]="!loginForm.valid">{{ 'BUTTONS.LOGIN' | translate }}</button>
+            <button type="submit" class="btn indigo btn-lg btn-block" id="button_login" [disabled]="!loginForm.valid">{{ 'BUTTONS.LOGIN' | translate }}</button>
           </div>
         </form>
 
@@ -86,7 +86,7 @@
     <!--Content-->
     <div class="modal-content">
       <!--Header-->
-      <div class="modal-header unique-color darken-3 white-text">
+      <div class="modal-header indigo darken-3 white-text">
         <h4 class="title">{{ 'LABELS.RESET_PASSWORD' | translate }}</h4>
         <button type="button" id="btn_close_modal" class="close waves-effect waves-light" data-dismiss="modal" aria-label="Close"
           (click)="resetPasswordModal.hide()">
