--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="text-center mb-3">
-          <button type="submit" [disabled]="!signupForm.valid" class="btn unique-color btn-lg btn-block" id="button_login">{{ 'LABELS.SIGN_UP' | translate }}</button>
+          <button type="submit" [disabled]="!signupForm.valid" class="btn indigo btn-lg btn-block" id="button_login">{{ 'LABELS.SIGN_UP' | translate }}</button>
         </div>
         <p class="font-small dark-grey-text text-right d-flex justify-content-center mb-3 pt-2"> {{ 'LABELS.SIGN_UP_WITH' | translate }}
         </p>
@@ -134,7 +134,7 @@
         </div>
 
         <div class="text-center mb-3">
-          <button type="submit" [disabled]="!signupForm.valid && !photographerUrlAvailable" [disabled]="" class="btn unique-color btn-lg btn-block"
+          <button type="submit" [disabled]="!signupForm.valid && !photographerUrlAvailable" [disabled]="" class="btn indigo btn-lg btn-block"
             id="button_login">{{ 'LABELS.SIGN_UP' | translate }}</button>
         </div>
       </form>
