--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,6 +1,6 @@
 <header>
   <!--Navbar-->
-  <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark unique-color">
+  <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark indigo">
 
     <!-- Navbar brand -->
     <logo>
@@ -15,41 +15,41 @@
       <!-- Links -->
       <ul class="navbar-nav mr-auto">
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link waves-light" mdbRippleRadius routerLink="/home" id="a_home">Home </a>
+          <a class="nav-link waves-light" mdbRippleRadius routerLink="/home" id="a_home">{{ 'NAV.HOME' | translate }} </a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link waves-light" mdbRippleRadius routerLink="/features" id="a_features">Features </a>
+          <a class="nav-link waves-light" mdbRippleRadius routerLink="/features" id="a_features">{{ 'NAV.FEATURES' | translate }} </a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link waves-light" mdbRippleRadius routerLink="/prices" id="a_prices">Preise </a>
+          <a class="nav-link waves-light" mdbRippleRadius routerLink="/prices" id="a_prices">{{ 'NAV.PRICES' | translate }} </a>
         </li>
 
       </ul>
 
       <ul class="nav navbar-nav nav-flex-icons ml-auto">
-        <li class="nav-item" *ngIf="!fbUser">
+        <li class="nav-item" *ngIf="!user">
           <a class="nav-link waves-effect waves-light" routerLink="/signup" id="a_signup">
-            <span class="clearfix d-none d-sm-inline-block">Registrieren</span>
+            <span class="clearfix d-none d-sm-inline-block">{{ 'NAV.SIGNUP' | translate }}</span>
           </a>
         </li>
-        <li class="nav-item" *ngIf="!fbUser">
+        <li class="nav-item" *ngIf="!user">
           <a class="nav-link waves-effect waves-light" routerLink="/login" id="a_login">
             <i class="fa fa-sign-in mr-1"></i>
-            <span class="clearfix d-none d-sm-inline-block">Anmelden</span>
+            <span class="clearfix d-none d-sm-inline-block">{{ 'NAV.SIGNIN' | translate }}</span>
           </a>
         </li>
 
-        <li class="nav-item" *ngIf="fbUser">
+        <li class="nav-item" *ngIf="user">
           <a class="nav-link waves-effect waves-light" routerLink="/dashboard" id="a_dashboard">
             <i class="fa fa-tachometer mr-1"></i>
-            <span class="clearfix d-none d-sm-inline-block">Dashboard</span>
+            <span class="clearfix d-none d-sm-inline-block">{{ 'NAV.DASHBOARD' | translate }}</span>
           </a>
         </li>
 
-        <li class="nav-item" *ngIf="fbUser">
+        <li class="nav-item" *ngIf="user">
           <a class="nav-link waves-effect waves-light" (click)="logout()" id="a_logout">
             <i class="fa fa-sign-out mr-1"></i>
-            <span class="clearfix d-none d-sm-inline-block">Abmelden</span>
+            <span class="clearfix d-none d-sm-inline-block">{{ 'NAV.LOGOUT' | translate }}</span>
           </a>
         </li>
 
