--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -53,7 +53,7 @@
           </a>
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!user?.roles.admin && !user?.roles.photographer">
           <a class="nav-link waves-effect waves-light" routerLink="/cart">
             <i class="fa fa-shopping-cart"></i>
           </a>
