--- a/src/app/components/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/components/dashboard-admin/dashboard-admin.component.html
@@ -10,6 +10,19 @@
     <div class="row">
       <div class="col-12">
         <br>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>{{ 'DASHBOARD.NAME' | translate }}</th>
+              <th>{{ 'DASHBOARD.DATE' | translate }}</th>
+              <th>{{ 'DASHBOARD.LOCATION' | translate }}</th>
+              <th>{{ 'DASHBOARD.PICTURES' | translate }}</th>
+              <th>{{ 'DASHBOARD.PHOTOGRAPHER' | translate }}</th>
+              <th>{{ 'DASHBOARD.EDIT' | translate }}</th>
+            </tr>
+          </thead>
+        </table>
       </div>
     </div>
   </mdb-tab>
@@ -17,6 +30,34 @@
     <div class="row">
       <div class="col-12">
         <br>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>{{ 'DASHBOARD.EMAIL' | translate }}</th>
+              <th>{{ 'DASHBOARD.ROLE' | translate }}</th>
+              <th>{{ 'DASHBOARD.SUBSCRIPTION' | translate }}</th>
+              <th>{{ 'DASHBOARD.EDIT' | translate }}</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let user of (users | async); let i = index">
+              <th scope="row">{{ i + 1 }}</th>
+              <td>{{ user.email }}</td>
+              <td>
+                <span *ngIf="user.roles.admin">{{ 'DASHBOARD.ADMIN' | translate }}</span>
+                <span *ngIf="user.roles.photographer">{{ 'DASHBOARD.PHOTOGRAPHER' | translate }}</span>
+                <span *ngIf="user.roles.user">{{ 'DASHBOARD.USER' | translate }}</span>
+              </td>
+              <td>{{ user.subscription.membership }}</td>
+              <td>
+                <a>
+                  <i class="fa fa-pencil" aria-hidden="true"></i>
+                </a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </mdb-tab>
