--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -1,5 +1,6 @@
 <div class="row mt-5 pt-5">
   <div class="col text-center">
     <h1>Cart Page</h1>
+    <p>Die Shopping cart Seite ist in Bearbeitung...</p>
   </div>
 </div>
