--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,6 +1,12 @@
 <div class="row mt-5 pt-5">
-  <div class="col text-center">
-    <h1>Page not Found Page</h1>
-    <p>Hi</p>
+  <div class="text-center" style="margin: auto">
+    <div>
+      <img class="animated flipInY" src="https://knowlikeandignite-knowlikeandignit.netdna-ssl.com/wp-content/uploads/2016/11/404.png">
+      <a>
+        <div class="mask"></div>
+      </a>
+      <h1>{{ 'TEXTS.PAGE_NOT_FOUND' | translate }}</h1>
+      <p class="section-description lead grey-text">{{ 'TEXTS.PAGE_NOT_FOUND_DESCRIPTION' | translate }}</p>
+    </div>
   </div>
 </div>
