--- a/src/app/components/dashboard-user/dashboard-user.component.html
+++ b/src/app/components/dashboard-user/dashboard-user.component.html
@@ -1,5 +1,12 @@
 <mdb-tabset #staticTabs [buttonClass]="'nav-tabs indigo'" [contentClass]="'card'">
-  <mdb-tab heading="Tab">
+  <mdb-tab heading="Purchases">
+    <div class="row">
+      <div class="col-12">
+        <br>
+      </div>
+    </div>
+  </mdb-tab>
+  <mdb-tab heading="Profile">
     <div class="row">
       <div class="col-12">
         <br>
