--- a/src/app/components/dashboard-photographer/dashboard-photographer.component.html
+++ b/src/app/components/dashboard-photographer/dashboard-photographer.component.html
@@ -7,8 +7,6 @@
       </div>
     </div>
 
-
-    <!-- Add new event floating button -->
     <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
       <a class="btn-floating btn-large indigo waves-light" mdbRippleRadius (click)="newEventModal.show()">
         <i class="fa fa-plus"></i>
@@ -42,7 +40,8 @@
   </mdb-tab>
 </mdb-tabset>
 
-<div mdbModal #newEventModal="mdb-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" [config]="{backdrop: true, ignoreBackdropClick: true}">
+<div mdbModal #newEventModal="mdb-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
+  [config]="{backdrop: true, ignoreBackdropClick: true}">
   <div class="modal-dialog cascading-modal" role="document">
     <div class="modal-content">
 
