added event components, imprint and photographer search apge

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -23,7 +23,9 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link waves-light" mdbRippleRadius routerLink="/prices" id="a_prices">{{ 'NAV.PRICES' | translate }} </a>
         </li>
-
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link waves-light" mdbRippleRadius routerLink="/search" id="a_prices">{{ 'NAV.SEARCH' | translate }} </a>
+        </li>
       </ul>
 
       <ul class="nav navbar-nav nav-flex-icons ml-auto">
