--- a/src/app/pages/features-page/features-page.component.html
+++ b/src/app/pages/features-page/features-page.component.html
@@ -1,5 +1,66 @@
 <div class="row mt-5 pt-5">
   <div class="col text-center">
-    <h1>Features Page</h1>
+    <div class="card card-cascade wider reverse my-4">
+      <div class="card-body text-center">
+
+        <!--Section: Features v.2-->
+        <section class="section feature-box">
+
+          <!--Section heading-->
+          <h1 class="section-heading pt-4" style="margin-top:0rem; margin-bottom:2rem">Was macht uns so besonders?</h1>
+          <!--Section description-->
+          <p class="section-description lead grey-text" style="margin-bottom:2rem">Entdecken Sie jetzt die vielfältigen Funktionen und Vorteile von EventPicKing.</p>
+
+          <!--Grid row-->
+          <div class="row features-small">
+
+            <!--Grid column-->
+            <div class="col-md-4 mb-r">
+              <div class="col-1 col-md-2 float-left">
+                <i class="fa fa-group blue-text"></i>
+              </div>
+              <div class="col-10 col-md-9 col-lg-10 float-right">
+                <h4 class="feature-title">Wir bringen Fotografen und Kunden zusammen</h4>
+                <p class="grey-text">Dies ist ein Fülltext. Hier soll beschrieben werden wie die Seite dabei helfen kenn Fotografen und Kunden
+                  zusammenzubringen.</p>
+                <a class="btn btn-primary btn-sm ml-0 waves-light" mdbRippleRadius>Mehr erfahren</a>
+              </div>
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-md-4 mb-r">
+              <div class="col-1 col-md-2 float-left">
+                <i class="fa fa-money pink-text"></i>
+              </div>
+              <div class="col-10 col-md-9 col-lg-10 float-right">
+                <h4 class="feature-title">Eventfotos schnell und simpel verkaufen</h4>
+                <p class="grey-text">Hier soll genau beschrieben werden, auf welche Art und Weise Eventfotos verkauft werden können.</p>
+                <a class="btn btn-pink btn-sm ml-0 waves-light" mdbRippleRadius>Mehr erfahren</a>
+              </div>
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-md-4 mb-r">
+              <div class="col-1 col-md-2 float-left">
+                <i class="fa fa-search purple-text"></i>
+              </div>
+              <div class="col-10 col-md-9 col-lg-10 float-right">
+                <h4 class="feature-title">Finden Sie den passenden Fotografen in Ihrer Nähe</h4>
+                <p class="grey-text">Hier ist eine genaue Beschreibung der Fotografensuche von Nöten. Es soll klar werden, wie der Kunde diese
+                  zu seinem Vorteil nutzen kann.</p>
+                <a class="btn btn-secondary btn-sm ml-0 waves-light" mdbRippleRadius>Mehr erfahren</a>
+              </div>
+            </div>
+            <!--Grid column-->
+
+          </div>
+          <!--Grid row-->
+
+        </section>
+        <!--Section: Features v.2-->
+      </div>
+    </div>
   </div>
 </div>
