save profile and account data

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,26 +1,8 @@
 <footer class="page-footer center-on-small-only pt-0 mt-5 fixed-bottom indigo">
 
-  <!--
-  <div class="container">
-    <div class="row">
-
-
-      <div class="col-md-6">
-        <ul>
-          <li>
-            <a routerLink="/imprint">Impressum</a>
-          </li>
-          <li>
-            <a routerLink="/data-protection">Datenschutzerklärung</a>
-          </li>
-        </ul>
-      </div>
-
-    </div>
-  </div> -->
-
   <div class="footer-copyright">
-    <div class="container-fluid">
+    <div class="container-fluid">Made with
+      <i class="fa fa-heart" styl="color: red" aria-hidden="true"></i>
       © 2017 Copyright:
       <a routerLink="/"> eventpicking.de </a>
     </div>
