--- a/src/app/components/dashboard-photographer/dashboard-photographer.component.html
+++ b/src/app/components/dashboard-photographer/dashboard-photographer.component.html
@@ -190,17 +190,18 @@
           <mdb-item>
             <mdb-item-head>Account Data</mdb-item-head>
             <mdb-item-body>
+              <br>
               <form [formGroup]="accountDataForm">
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="name">
+                  <input type="text" class="form-control" formControlName="name">
                   <label class="active">Name</label>
                 </div>
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="lastname">
+                  <input type="text" class="form-control" formControlName="lastname">
                   <label class="active">Lastname</label>
                 </div>
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="email">
+                  <input type="text" class="form-control" formControlName="email">
                   <label class="active">Contact E-Mail</label>
                 </div>
               </form>
@@ -209,37 +210,38 @@
           <mdb-item>
             <mdb-item-head>Billing Information</mdb-item-head>
             <mdb-item-body>
+              <br>
               <form [formGroup]="billingAddressForm">
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="company">
+                  <input type="text" class="form-control" formControlName="company">
                   <label class="active">Company</label>
                 </div>
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="name">
+                  <input type="text" class="form-control" formControlName="name">
                   <label class="active">Name</label>
                 </div>
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="lastname">
+                  <input type="text" class="form-control" formControlName="lastname">
                   <label class="active">Lastname</label>
                 </div>
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="phone">
+                  <input type="text" class="form-control" formControlName="phone">
                   <label class="active">Phone</label>
                 </div>
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="email">
+                  <input type="text" class="form-control" formControlName="email">
                   <label class="active">Contact E-Mail</label>
                 </div>
                 <div class="row">
                   <div class="col-md-9">
                     <div class="md-form">
-                      <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="street">
+                      <input type="text" class="form-control" formControlName="street">
                       <label class="active">Street</label>
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="md-form">
-                      <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="streetnumber">
+                      <input type="text" class="form-control" formControlName="streetnumber">
                       <label class="active">Streetnumber</label>
                     </div>
                   </div>
@@ -247,13 +249,13 @@
                 <div class="row">
                   <div class="col-md-9">
                     <div class="md-form">
-                      <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="city">
+                      <input type="text" class="form-control" formControlName="city">
                       <label class="active">City</label>
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="md-form">
-                      <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="zip">
+                      <input type="text" class="form-control" formControlName="zip">
                       <label class="active">ZIP</label>
                     </div>
                   </div>
@@ -262,50 +264,51 @@
             </mdb-item-body>
           </mdb-item>
           <mdb-item>
+            <br>
             <mdb-item-head>Public Profile Data</mdb-item-head>
             <mdb-item-body>
               <form [formGroup]="publicProfileForm">
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="name">
+                  <input type="text" class="form-control" formControlName="name">
                   <label class="active">Displayed name</label>
                 </div>
                 <div class="md-form">
-                  <textarea class="md-textarea" type="text" length="120" mdbCharCounter mdbActive formControlName="about"></textarea>
+                  <textarea class="md-textarea" type="text" length="120" mdbCharCounter formControlName="about"></textarea>
                   <label class="active">About you</label>
                 </div>
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="facebook">
+                  <input type="text" class="form-control" formControlName="facebook">
                   <label class="active">Facebook Profile</label>
                 </div>
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="instagram">
+                  <input type="text" class="form-control" formControlName="instagram">
                   <label class="active">Instagram Profile</label>
                 </div>
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="tumbler">
+                  <input type="text" class="form-control" formControlName="tumbler">
                   <label class="active">Tumbler Profile</label>
                 </div>
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="twitter">
+                  <input type="text" class="form-control" formControlName="twitter">
                   <label class="active">Twitter Profile</label>
                 </div>
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="website">
+                  <input type="text" class="form-control" formControlName="website">
                   <label class="active">Website Profile</label>
                 </div>
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="phone">
+                  <input type="text" class="form-control" formControlName="phone">
                   <label class="active">Phone</label>
                 </div>
                 <div class="md-form">
-                  <input mdbActive type="text" class="form-control" mdbInputValidate formControlName="email">
+                  <input type="text" class="form-control" formControlName="email">
                   <label class="active">Contact E-Mail</label>
                 </div>
               </form>
             </mdb-item-body>
           </mdb-item>
         </mdb-squeezebox>
-        <button type="submit" class="btn btn-lg btn-block waves-light indigo" mdbRippleRadius>Update Profile</button>
+        <button type="submit" class="btn btn-lg btn-block waves-light indigo" mdbRippleRadius (click)="updateProfile()">Update Profile</button>
       </div>
     </div>
   </mdb-tab>
@@ -330,17 +333,17 @@
         <form [formGroup]="newEventForm" (ngSubmit)="saveEvent()">
 
           <div class="md-form">
-            <input mdbActive type="text" class="form-control" id="input_newevent_name" formControlName="name">
+            <input type="text" class="form-control" id="input_newevent_name" formControlName="name">
             <label for="form2">{{ 'LABELS.EVENT_NAME' | translate }}</label>
           </div>
 
           <div class="md-form">
-            <input mdbActive type="text" class="form-control" id="input_newevent_location" formControlName="location">
+            <input type="text" class="form-control" id="input_newevent_location" formControlName="location">
             <label for="form2">{{ 'LABELS.EVENT_LOCATION' | translate }}</label>
           </div>
 
           <div class="md-form">
-            <input mdbActive type="text" class="form-control" id="input_newevent_date" formControlName="date">
+            <input type="text" class="form-control" id="input_newevent_date" formControlName="date">
             <label for="form2">{{ 'LABELS.EVENT_DATE' | translate }}</label>
           </div>
 
